# opengl-game

./: CMakeLists.txt  README.md  game.cpp  game.h  main.cpp  resourceManager.cpp  resourceManager.h
component/: gameLevel.cpp  gameLevel.h  gameObject.cpp  gameObject.h  player.cpp  player.h  spriteRenderer.cpp  spriteRenderer.h  textRenderer.cpp  textRenderer.h
levels/: one.level  three.level  two.level
utility/: shader.cpp  shader.h  texture.cpp  texture.h
